@@ -1,3 +1,11 @@
+2004-11-15  Matthias Klose  <doko@debian.org>
+
+	* docs/doxygen/run_doxygen: Add --build_alias option,
+	substitute it in docs/doxygen/user.cfg.in.
+	* docs/doxygen/user.cfg.in: Use build_alias.
+	* Makefile.am: Pass --build_alias to run_doxygen
+	* Makefile.in: Regenerate.
+
 2004-11-15  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/testsuite_abi.cc (check_version): Add GLIBCXX_3.4.4.
